# ToughCert

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: combined_fracture_training.csv  combined_fracture_unseen.csv
configs/: default.yaml
examples/: example_predictions.csv  example_test_priorities.csv  qualification_report.html
src/: __init__.py  cli.py  config.py  conformal.py  data.py  evaluate.py  gbdt.py  model.py  models_auto.py  physics.py  predict.py  prepare_data.py  qualify.py  report.py  schema.py  screen.py  segment_evaluate.py  segment_predict.py  segment_train.py  train.py  tune_gbdt.py  utils.py  visualize.py
tests/: conftest.py  test_cli.py  test_conformal.py  test_data.py  test_physics.py  test_predict.py  test_prepare_data.py  test_qualify_certify.py  test_screen.py  test_smoke.py  test_visualize.py
